# mpvipc-async

./: .gitignore  Cargo.toml  README.md  flake.nix  setup_test_assets.sh
.cargo/: config.toml
.gitea/workflows/: build-and-test.yml
examples/: fetch_state.rs  media_player.rs  mpv_event_stream.rs
scripts/: coverage.sh
src/: api.rs  api_extension.rs  core_api.rs  error.rs  event_parser.rs  event_property_parser.rs  highlevel_api_extension.rs  ipc.rs  lib.rs  message_parser.rs  property_parser.rs
tests/: events.rs  get_property.rs  integration.rs  mock_socket.rs  set_property.rs
tests/integration/: event_property_parser.rs  misc.rs
tests/integration_tests/: event_property_parser.rs  highlevel_api.rs  misc.rs  mod.rs  util.rs
tests/mock_socket_tests/: events.rs  get_property.rs  mod.rs  set_property.rs
