[package]
name = "mpvipc-async"
version = "0.1.0"
authors = [
  "Jonas Frei <freijon@pm.me>",
  "Øystein Tveit <oysteikt@pvv.ntnu.no>"
]
description = "A small library which provides bindings to control existing mpv instances through sockets."
license = "GPL-3.0"
repository = "https://git.pvv.ntnu.no/Grzegorz/mpvipc-async"
documentation = "https://pages.pvv.ntnu.no/Grzegorz/mpvipc-async/main/docs/mpvipc_async/"
edition = "2021"
rust-version = "1.75"

[dependencies]
serde_json = "1.0.145"
log = "0.4.28"
serde = { version = "1.0.225", features = ["derive"] }
tokio = { version = "1.47.1", features = ["sync", "macros", "rt", "net"] }
tokio-util = { version = "0.7.16", features = ["codec"] }
futures = "0.3.31"
tokio-stream = { version = "0.1.17", features = ["sync"] }
thiserror = "2.0.16"

[dev-dependencies]
env_logger = "0.11.8"
test-log = "0.2.18"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "time", "process"] }
uuid = { version = "1.18.1", features = ["v4"] }

[lib]
doctest = false
