[package]
name = "mpvipc-async"
version = "0.2.0"
authors = [
  "Jonas Frei <freijon@pm.me>",
  "Øystein Tveit <oysteikt@pvv.ntnu.no>"
]
description = "A small library which provides bindings to control existing mpv instances through sockets."
license = "GPL-3.0"
repository = "https://git.pvv.ntnu.no/Grzegorz/mpvipc-async"
documentation = "https://pages.pvv.ntnu.no/Grzegorz/mpvipc-async/main/docs/mpvipc_async/"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
serde_json = "1.0.149"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["sync", "macros", "rt", "net"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
futures = "0.3.31"
tokio-stream = { version = "0.1.18", features = ["sync"] }
thiserror = "2.0.18"

[dev-dependencies]
env_logger = "0.11.8"
test-log = "0.2.19"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "time", "process"] }
uuid = { version = "1.20.0", features = ["v4"] }

[lib]
doctest = false
